--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.development.env
+.production.env
+.stage.env
+.env
