--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/ecs-winston-format": "^1.3.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
@@ -29,14 +30,11 @@
     "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "nestjs-pino": "^2.5.0",
-    "pino": "^7.6.5",
-    "pino-http": "^6.6.0",
-    "pino-pretty": "^7.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
