--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@elastic/ecs-winston-format": "^1.3.0",
+    "@elastic/ecs-winston-format": "^1.3.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.0.6",
@@ -34,7 +34,9 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "source-map-support": "^0.5.16",
-    "winston": "^3.5.1"
+    "winston": "^3.5.1",
+    "winston-logstash": "^0.4.0",
+    "winston3-logstash-transport": "^1.2.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
