elk stack fixes

--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -1,21 +1,14 @@
 input {
-    beats {
-        port => 5044
-    }
-}
-
-filter {
-  json {
-    source => "message"
-	target => "message"
-	skip_on_invalid_json => true
-  }
+	beats {
+		client_inactivity_timeout => 1200 
+		port => 5044
+	}
 }
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		user => elastic
-		password => changeme
+		user => "elastic"
+		password => "changeme"
 	}
 }
