logstash pipeline config changes

--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -5,6 +5,16 @@ input {
 	}
 }
 
+filter {
+  json {
+    source => "message"
+  }
+  date{
+    match => ["timestamp", "UNIX_MS"]
+    target => "@timestamp"
+  }
+}
+
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
